# wipekit

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
docs/: research_docs.md
examples/: file_reader_example.py  logger_example.py  mysql_example.py  oracle_example.py  postgres_example.py  universal_reader_example.py
wipekit/anonymization/: __init__.py  k_anonymity.py
wipekit/exceptions/: __init__.py
wipekit/logging/: __init__.py  logger.py
wipekit/read/: __init__.py  config.py  file_reader.py  mysql.py  oracle.py  postgresql.py
wipekit/utils/: __init__.py  logging_config.py
